--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
   <script>
     // ✅ 替换为你的 Supabase 项目信息
-    const SUPABASE_URL = 'https://jbknyzvztrzrrpehfltc.co';
+    const SUPABASE_URL = 'https://jbknyzvztrzrrpehfltc.supabase.co';
     const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Impia255enZ6dHJ6cnJwZWhmbHRjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ1NDA4NjAsImV4cCI6MjA3MDExNjg2MH0.314sthAvpwesRRyodsAP2dRvreZ7Q3blAAC0RVGJXNI';
 
     // 加载名字
