--- a/index.html
+++ b/index.html
@@ -46,11 +46,10 @@
   </div>
 
   <script>
-    // ✅ 替换为你的 Supabase 项目信息
-    const SUPABASE_URL = 'https://jbknyzvztrzrrpehfltc.supabase.co';
-    const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Impia255enZ6dHJ6cnJwZWhmbHRjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ1NDA4NjAsImV4cCI6MjA3MDExNjg2MH0.314sthAvpwesRRyodsAP2dRvreZ7Q3blAAC0RVGJXNI';
+    // ✅ 请替换以下两个值为你的真实数据
+    const SUPABASE_URL = 'https://jbknyzvztrzrrpehfltc.supabase.co';  // 替换成你的项目 URL
+    const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Impia255enZ6dHJ6cnJwZWhmbHRjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ1NDA4NjAsImV4cCI6MjA3MDExNjg2MH0.314sthAvpwesRRyodsAP2dRvreZ7Q3blAAC0RVGJXNI';  // 替换成你的 Anon Key
 
-    // 加载名字
     async function loadNames() {
       try {
         const response = await fetch(`${SUPABASE_URL}/rest/v1/table1`, {
@@ -62,23 +61,26 @@
           }
         });
 
+        if (!response.ok) {
+          console.error('HTTP 错误:', response.status, response.statusText);
+          document.getElementById("nameList").innerHTML = "加载失败，请检查网络或配置";
+          return;
+        }
+
         const data = await response.json();
 
-        // ✅ 关键修复：使用 data.data
         if (Array.isArray(data.data)) {
           const names = data.data.map(item => item.name1);
           displayNames(names);
         } else {
-          console.warn("数据格式异常", data);
-          document.getElementById("nameList").innerHTML = "暂无数据";
+          document.getElementById("nameList").innerHTML = "数据格式异常";
         }
       } catch (error) {
-        console.error("加载失败", error);
-        document.getElementById("nameList").innerHTML = "无法加载数据，请检查网络或配置";
+        console.error("请求失败", error);
+        document.getElementById("nameList").innerHTML = "无法连接数据库";
       }
     }
 
-    // 提交名字
     async function submitName() {
       const input = document.getElementById("nameInput");
       const name = input.value.trim();
@@ -88,7 +90,7 @@
       }
 
       try {
-        await fetch(`${SUPABASE_URL}/rest/v1/table1`, {
+        const response = await fetch(`${SUPABASE_URL}/rest/v1/table1`, {
           method: 'POST',
           headers: {
             'apikey': SUPABASE_ANON_KEY,
@@ -98,15 +100,21 @@
           },
           body: JSON.stringify({ name1: name })
         });
-        input.value = ""; // 清空输入框
-        loadNames(); // 刷新显示
+
+        if (!response.ok) {
+          console.error('提交失败:', response.status, await response.text());
+          alert("提交失败，请稍后重试");
+          return;
+        }
+
+        input.value = "";
+        loadNames();
       } catch (error) {
-        alert("提交失败，请稍后重试");
-        console.error(error);
+        console.error("提交错误", error);
+        alert("提交失败，请检查网络");
       }
     }
 
-    // 显示名字
     function displayNames(names) {
       const container = document.getElementById("nameList");
       if (names.length === 0) {
@@ -118,7 +126,6 @@
         .join("");
     }
 
-    // 页面加载时获取名字
     window.onload = loadNames;
   </script>
 </body>
