--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
         // 在您的部署平台（如 Vercel, Netlify）中，需要设置以下两个环境变量：
         // - SUPABASE_URL: 您的 Supabase 项目 URL
         // - SUPABASE_KEY: 您的 Supabase 公开匿名密钥
-        const SUPABASE_URL = https://jbknyzvztrzrrpehfltc.supabase.co;
-        const SUPABASE_KEY = eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Impia255enZ6dHJ6cnJwZWhmbHRjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ1NDA4NjAsImV4cCI6MjA3MDExNjg2MH0.314sthAvpwesRRyodsAP2dRvreZ7Q3blAAC0RVGJXNI;
+        const SUPABASE_URL = "https://jbknyzvztrzrrpehfltc.supabase.co";
+        const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Impia255enZ6dHJ6cnJwZWhmbHRjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ1NDA4NjAsImV4cCI6MjA3MDExNjg2MH0.314sthAvpwesRRyodsAP2dRvreZ7Q3blAAC0RVGJXNI";
 
         // 初始化 Supabase 客户端
         const supabase = createClient(SUPABASE_URL, SUPABASE_KEY);
@@ -336,3 +336,4 @@
     </script>
 </body>
 </html>
+
